# pyPowerUp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  python-package.yml
docs/: multilevel_randomized_experiments.rst
pyPowerUp/: __init__.py  mde.py  power.py  sample_size.py  utils.py
test/: test_mde.py  test_power.py  test_sample_size.py
