[project]
name = "pypowerup"
version = "1.0.0"
description = "A Python implementation of PowerUpR for calculating power, sample size, and minimum detectable effect size of multilevel randomized experiments"
authors = [
    {name = "Conor McNamara", email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["statistics", "power-analysis", "experimental-design", "sample-size", "effect-size"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
# All dependencies are defined here (PEP 621)
# No requirements.txt needed - use: pip install -e ".[dev]" for development
dependencies = [
    "scipy>=1.15.2,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "zuban",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ConorMcNamara/pyPowerUp"
Repository = "https://github.com/ConorMcNamara/pyPowerUp"
Issues = "https://github.com/ConorMcNamara/pyPowerUp/issues"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyPowerUp*"]
exclude = ["test*", "docs*"]

[tool.pytest.ini_options]
pythonpath = [".", "pyPowerUp"]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=pyPowerUp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.zuban]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
warn_unreachable = true
allow_untyped_globals = false
check_untyped_defs = false
follow_untyped_imports = true
exclude_gitignore = true
mode = "default"  # Or "mypy"

# Recommended (and the default) for untyped code
untyped_strict_optional = true

# Mypy's default is "any", Zuban's "inferred"
untyped_function_return_mode = "inferred"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N803",   # argument name should be lowercase (conflicts with math conventions)
    "N806",   # variable in function should be lowercase (conflicts with math conventions)
    "N999",   # invalid module name (pyPowerUp is intentional branding)
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["pyPowerUp"]
omit = ["test/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
